[tool.poetry]
name = "pingupbackend"
version = "0.1.0"
description = "Backend API for PingUp Messaging app."
authors = ["Cybertronian123 <atrayanmukherjee0248@gmail.com>"]
license = "MIT"
readme = "README.rst"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.2"
djangorestframework = "^3.15.2"
django-cors-headers = "^4.5.0"
pymongo = "^4.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


